# app/models/groups_user.rb
@@ -1,5 +1,6 @@
 class GroupsUser < ApplicationRecord
-  belongs_to :group, counter_cache: :users_count
+  include Status
+  belongs_to :group
   belongs_to :user
 
   # validates :group_id#, presence: true
@@ -7,4 +8,12 @@ class GroupsUser < ApplicationRecord
 
   scope :admin, -> { where(admin: true) }
   scope :non_admin, -> { where(admin: false ) }
+
+  def set_approved!
+    update_column(:status, :approved)
+  end
+
+  def set_declined!
+    update_column(:status, :declined)
+  end
 end
