# app/serializers/api/v1/group_serializer.rb
@@ -5,7 +5,7 @@ module Api
       attributes :id, :name, :description, :privacy, :university, :section,
                  :president, :vice_president, :treasure, :social_director,
                  :secretary, :email, :calendar_link, :status, :users_count,
-                 :avatar, :friends_count, :owner, :group_users
+                 :friends_count, :owner, :group_users
 
       def owner
         ActiveModelSerializers::SerializableResource.new(object.owner, serializer: Api::V1::UserSerializer)
@@ -15,14 +15,14 @@ module Api
         ActiveModel::Serializer::CollectionSerializer.new(object.groups_users, serializer: Api::V1::GroupsUserSerializer)
       end
 
-      def avatar
-        object.avatar.attached? ? rails_blob_url(object.avatar) : nil
-      end
+      # def avatar
+      #   object.avatar.attached? ? rails_blob_url(object.avatar) : nil
+      # end
 
       def friends_count
         current_user = @instance_options[:current_user]
         if current_user.present?
-          object.groups_users
+          object.groups_users.where(status: "approved")
             .joins("INNER JOIN friendships on (friendships.friend_id = groups_users.user_id) OR (friendships.user_id = groups_users.user_id) AND (friendships.friend_id != #{current_user.id} AND friendships.user_id != #{current_user.id})")
             .where(friendships: {status: '1'}).count
         else
